# colina

./: README.md  environment.yml
analysis/: comsol-angle-of-approach.ipynb  rusty-toy.ipynb  toy_analysis.ipynb
toy-mc/: Cargo.toml  flake.nix  justfile
toy-mc-python/: toy_v2.ipynb
toy-mc/conf/: test.toml
toy-mc/src/: config.rs  el_gap.rs  event.rs  geometry.rs  image.rs  lib.rs  random.rs  sim_params.rs  simulation.rs  sipm_plane.rs  wire_plane.rs
toy-mc/src/io/: conf.rs  csv.rs  feather.rs  mod.rs  select.rs
