[package]
name = "toymc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.0"
rand_distr = "0.5.1"
nalgebra = "0.33.2"
float_eq = "1.0.1"
clap = { version = "4.5.35", features = ["derive"] }
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
derive-new = "0.7.0"
config = "0.15.11"
cached = "0.55.1"
rayon = "1.10.0"
ndhistogram = { version = "0.10.0", features = ["rayon"] }
itertools = "0.14.0"
#hdf5 = "0.8.1"
arrow = "55.0.0"
tempfile = "3.19.1"
indicatif = "0.17.11"
